# gitlab-extended-mcp

./: .cursorignore  .env.example  README.md  pyproject.toml  server.py
.github/workflows/: docker-publish.yml
