[project]
name = "gitlab-extended-mcp"
version = "0.1.0"
description = "Extended GitLab MCP tools — MR discussions, replies, approvals, job logs, and more"
requires-python = ">=3.11"
dependencies = [
    "mcp==1.27.0",
    "httpx==0.28.1",
]

[project.scripts]
gitlab-extended-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
